# rinha-fastapi-2024-q1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  script.sql
50/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
55-10-35/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
alpine/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
backend/: main.py
background/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
commit_insert/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
gunicorn/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
main/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
rinhabackendcrebitossimulation-20240309195254482/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
rinhabackendcrebitossimulation-20240310003521383/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  (+2 more)
update/: index.html  (+4 more)
(+149 files in other folders)
