[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dino Aguilar <chipytux@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.29.0"
fastapi = {extras = ["all"], version = "^0.109.2"}
sqlalchemy = "^2.0.27"
pre-commit = "^3.6.2"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
